@@ -148,6 +148,7 @@ AC_OUTPUT( Makefile \
            src/demo/solvers/Makefile \
            src/demo/solvers/ode/Makefile \
            src/demo/solvers/ode/stiff/Makefile \
+           src/demo/solvers/ode/mechanical/Makefile \
            src/utils/Makefile \
            src/utils/inp2dx/Makefile \
            src/greeting/Makefile )
